Add option to pass a directory to run all tests inside